networkPolicies/examples/24_1_allowAccessIntraNs-v2-flux.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-intra-ns-comms-appteam2-flux"
  namespace: "flux-system"
specs:
  - endpointSelector: {}
    egress:
    - toEndpoints:
      - {}
    ingress:
    - fromEndpoints:
      - {}
