networkPolicies/examples/24_ingress_egress_in_infra_ns.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-in-egress-in-infra-ns"
  namespace: "<infra-ns>"
specs:
  - endpointSelector: {}
    egress:
    - toEndpoints: 
        - {}
    ingress:
    - fromEndpoints:
        - {}
