networkPolicies/examples/24_rule1_db_prod_l7-v2.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "prod-app-traffic-in-80"
  namespace: appteam2-app2-ns
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: app
  ingress:
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/*"
